--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,24 @@
-cmake_minimum_required(VERSION 3.14)
-project(InitTools VERSION 1.0.0 LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.24)
+project(InitTools VERSION 1.0.3 LANGUAGES CXX)
 
-# set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
-set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
+set(CMAKE_CXX_STANDARD 20)
+
+message(STATUS "InitTools: Version 1.0.3")
+
+option(INITTOOLS_BUILD_DEBUG "Дебаг билд" ON)
+
+if(INITTOOLS_BUILD_DEBUG)
+    message(STATUS "InitTools: Build Debug")
+    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
+else()
+    message(STATUS "InitTools: Build Release")
+    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
+endif()
 
 include(FetchContent)
 
 # INIT_TOOLS -> INIT_LOGGER:
+    message(STATUS "InitTools: INITTOOLS -> INIT_LOGGER ~ spdlog v1.15.3")
     FetchContent_Declare( # spdlog
         spdlog
         GIT_REPOSITORY https://github.com/gabime/spdlog.git
@@ -19,6 +31,7 @@ include(FetchContent)
 
 # INIT_TOOLS -> INIT_WINDOW:
     # GLFW
+    message(STATUS "InitTools: INITTOOLS -> INIT_WINDOW ~ GLFW 3.4")
     FetchContent_Declare(
             glfw
             GIT_REPOSITORY https://github.com/glfw/glfw.git
@@ -26,35 +39,31 @@ include(FetchContent)
     )
     FetchContent_MakeAvailable(glfw)
     # ====
-    # GLAD
+    message(STATUS "InitTools: INITTOOLS -> INIT_WINDOW ~ GLAD v0.1.36")
+    # GLAD - 
+    set(GLAD_PATCH ${CMAKE_CURRENT_SOURCE_DIR}/patches/glad-set-min-cmake-3.24.patch)
     FetchContent_Declare(
             glad
             GIT_REPOSITORY https://github.com/Dav1dde/glad.git
             GIT_TAG        v0.1.36
+            PATCH_COMMAND
+                ${CMAKE_COMMAND} -E echo "Patching glad/CMakeLists.txt -> bump cmake_minimum_required to 3.24"
+                COMMAND git apply ${GLAD_PATCH}
+            UPDATE_DISCONNECTED 1
     )
-    if(NOT glad_POPULATED)
-        FetchContent_GetProperties(glad)
-        if(NOT glad_POPULATED)
-            FetchContent_Populate(glad)
-
-            set(GLAD_CMAKE_FILE "${glad_SOURCE_DIR}/CMakeLists.txt")
-            file(READ "${GLAD_CMAKE_FILE}" GLAD_CMAKE_CONTENTS)
-            string(REGEX REPLACE
-                "cmake_minimum_required\\(VERSION[ \t]+3\\.0[^\)]*\\)"
-                "cmake_minimum_required(VERSION 3.5)"
-                GLAD_CMAKE_CONTENTS "${GLAD_CMAKE_CONTENTS}"
-            )
-            file(WRITE "${GLAD_CMAKE_FILE}" "${GLAD_CMAKE_CONTENTS}")
-            
-            add_subdirectory(${glad_SOURCE_DIR} ${glad_BINARY_DIR})
-        endif()
-    endif()
+    FetchContent_MakeAvailable(glad)
     # ====
     # GLM
+    set(GLM_PATCH ${CMAKE_CURRENT_SOURCE_DIR}/patches/glm-set-min-cmake-3.24.patch)
+    message(STATUS "InitTools: INITTOOLS -> INIT_WINDOW ~ GLM 1.0.1")
     FetchContent_Declare(
             glm
             GIT_REPOSITORY https://github.com/g-truc/glm.git
             GIT_TAG        1.0.1
+            PATCH_COMMAND
+                ${CMAKE_COMMAND} -E echo "Patching glm/CMakeLists.txt -> bump cmake_minimum_required to 3.24"
+                COMMAND git apply ${GLM_PATCH}
+            UPDATE_DISCONNECTED 1
     )
     FetchContent_MakeAvailable(glm)
     # ===
@@ -67,12 +76,12 @@ add_library(InitTools STATIC
     ${INIT_LOGGER_SOURCES}
     ${INIT_WINDOW_SOURCES}
 )
+target_compile_features(InitTools PUBLIC cxx_std_20)
+
 target_link_libraries(InitTools PRIVATE
     spdlog # InitLogger
     glfw glad glm # InitWindow
 )
-
-target_compile_features(InitTools PUBLIC cxx_std_17)
 
 target_include_directories(InitTools
     PRIVATE
