Подготовка к v2.0.0. Добавлены новые сырые модули. Добавлен Doxygen. Расписаны два подмодуля.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+.cache/
+
+# Теперь все равно не используется, в будущем будет удален
 .vscode/
+
+# CMake
 build/
+
+# Личное
+.dev/
+
+# Тестовая документация
+doxygen/
