Добавление модуля InitFiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ message(STATUS "InitTools: Build Type - ${CMAKE_BUILD_TYPE}")
 
 option(INITTOOLS_ENABLE_INITPLATFORM "Enable Module InitPlatform" ON)
 option(INITTOOLS_ENABLE_INITCONSOLE "Enable Module InitConsole" ON)
+option(INITTOOLS_ENABLE_INITFILES "Enable Module InitFiles" ON)
 option(INITTOOLS_ENABLE_INITWINDOW "Enable Module InitWindow" ON)
 
 include(FetchContent)
@@ -43,6 +44,17 @@ message(STATUS "InitTools: INITTOOLS -> INITPLATFORM")
     )
 else()
 message(STATUS "InitTools: INITTOOLS_ENABLE_INITPLATFORM disabled")
+endif()
+
+if(INITTOOLS_ENABLE_INITFILES)
+message(STATUS "InitTools: INITTOOLS -> INITFILES")
+# INIT_TOOLS -> INIT_FILES:
+    
+    file(GLOB_RECURSE INITFILES_SOURCES CONFIGURE_DEPENDS
+        src/InitTools/InitFiles/*.cpp
+    )
+else()
+message(STATUS "InitTools: INITTOOLS_ENABLE_INITFILES disabled")
 endif()
 
 if(INITTOOLS_ENABLE_INITCONSOLE)
@@ -119,11 +131,14 @@ set(INITTOOLS_ADD_LIBRARY
     ${INITCONSOLE_SOURCES}
     ${INITWINDOW_SOURCES}
 )
-if(INITTOOLS_ENABLE_INITPLATFORM)
+if(INITTOOLS_ENABLE_INITPLATFORM) # InitPlatform
     list(APPEND INITTOOLS_ADD_LIBRARY ${INITPLATFORM_SOURCES})
 endif()
 if(INITTOOLS_ENABLE_INITCONSOLE) # InitConsole
     list(APPEND INITTOOLS_ADD_LIBRARY ${INITCONSOLE_SOURCES})
+endif()
+if(INITTOOLS_ENABLE_INITFILES) # InitFiles
+    list(APPEND INITTOOLS_ADD_LIBRARY ${INITFILES_SOURCES})
 endif()
 if(INITTOOLS_ENABLE_INITWINDOW) # InitWindow
     list(APPEND INITTOOLS_ADD_LIBRARY ${INITWINDOW_SOURCES})
@@ -143,6 +158,9 @@ endif()
 if(INITTOOLS_ENABLE_INITCONSOLE) # InitConsole
     list(APPEND INITTOOLS_TARGET_LINK_LIBRARIES spdlog)
 endif()
+if(INITTOOLS_ENABLE_INITFILES) # InitFiles
+
+endif()
 if(INITTOOLS_ENABLE_INITWINDOW) # InitWindow
     list(APPEND INITTOOLS_TARGET_LINK_LIBRARIES glfw glad glm)
 endif()
@@ -157,6 +175,9 @@ if(INITTOOLS_ENABLE_INITPLATFORM) # InitPlatform
 endif()
 if(INITTOOLS_ENABLE_INITCONSOLE) # InitConsole
     list(APPEND INITTOOLS_TARGET_INCLUDE_DIRECTORIES ${spdlog_SOURCE_DIR}/include)
+endif()
+if(INITTOOLS_ENABLE_INITFILES) # InitFiles
+
 endif()
 if(INITTOOLS_ENABLE_INITWINDOW) # InitWindow
     list(APPEND INITTOOLS_TARGET_INCLUDE_DIRECTORIES ${glfw_SOURCE_DIR}/include ${glad_SOURCE_DIR}/include ${glm_SOURCE_DIR})
