Исправление CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,26 +120,32 @@ endif()
 if(INITTOOLS_ENABLE_INITWINDOW)
 message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
 # INIT_TOOLS -> INIT_WINDOW:
-    # GLFW
-    message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLFW 3.4 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLFW})")
-    if(INITTOOLS_USE_SYSTEM_GLFW)
-        find_package(glfw REQUIRED)
-    else()
-        FetchContent_Declare(
+        # GLFW
+        message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLFW 3.4 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLFW})")
+        if(INITTOOLS_USE_SYSTEM_GLFW)
+            if(GLFW3_LIBRARY AND GLFW3_INCLUDE_DIR)
+                # message(STATUS "Using manually provided GLFW: ${GLFW3_LIBRARY}")
+                set(GLFW_LIBRARIES ${GLFW3_LIBRARY})
+                set(GLFW_INCLUDE_DIRS ${GLFW3_INCLUDE_DIR})
+            else()
+                find_package(glfw REQUIRED)
+            endif()
+        else()
+            FetchContent_Declare(
                 glfw
                 GIT_REPOSITORY https://github.com/glfw/glfw.git
                 GIT_TAG        3.4
-        )
-        FetchContent_MakeAvailable(glfw)
-    endif()
-    # ========================================================================================================
-    # GLAD
-    message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLAD v0.1.36 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLAD})")
-    if(INITTOOLS_USE_SYSTEM_GLAD)
-        find_package(glad REQUIRED)
-    else()
-        set(GLAD_PATCH ${CMAKE_CURRENT_SOURCE_DIR}/patches/glad-set-min-cmake-3.24.patch)
-        FetchContent_Declare(
+            )
+            FetchContent_MakeAvailable(glfw)
+        endif()
+        # ========================================================================================================
+        # GLAD
+        message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLAD v0.1.36 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLAD})")
+        if(INITTOOLS_USE_SYSTEM_GLAD)
+            find_package(glad REQUIRED)
+        else()
+            set(GLAD_PATCH ${CMAKE_CURRENT_SOURCE_DIR}/patches/glad-set-min-cmake-3.24.patch)
+            FetchContent_Declare(
                 glad
                 GIT_REPOSITORY https://github.com/Dav1dde/glad.git
                 GIT_TAG        v0.1.36
@@ -147,17 +153,17 @@ message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
                     ${CMAKE_COMMAND} -E echo "Patching glad/CMakeLists.txt -> bump cmake_minimum_required to 3.24"
                     COMMAND git apply ${GLAD_PATCH}
                 UPDATE_DISCONNECTED 1
-        )
-    endif()
-    FetchContent_MakeAvailable(glad)
-    # ============================================================================================================
-    # GLM
-    message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLM 1.0.1 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLM})")
-    if(INITTOOLS_USE_SYSTEM_GLM)
-        find_package(glm REQUIRED)
-    else()
-        set(GLM_PATCH ${CMAKE_CURRENT_SOURCE_DIR}/patches/glm-set-min-cmake-3.24.patch)
-        FetchContent_Declare(
+            )
+        endif()
+        FetchContent_MakeAvailable(glad)
+        # ============================================================================================================
+        # GLM
+        message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLM 1.0.1 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLM})")
+        if(INITTOOLS_USE_SYSTEM_GLM)
+            find_package(glm REQUIRED)
+        else()
+            set(GLM_PATCH ${CMAKE_CURRENT_SOURCE_DIR}/patches/glm-set-min-cmake-3.24.patch)
+            FetchContent_Declare(
                 glm
                 GIT_REPOSITORY https://github.com/g-truc/glm.git
                 GIT_TAG        1.0.1
@@ -165,10 +171,10 @@ message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
                     ${CMAKE_COMMAND} -E echo "Patching glm/CMakeLists.txt -> bump cmake_minimum_required to 3.24"
                     COMMAND git apply ${GLM_PATCH}
                 UPDATE_DISCONNECTED 1
-        )
-        FetchContent_MakeAvailable(glm)
-    endif()
-    # ========================================================================================================
+            )
+            FetchContent_MakeAvailable(glm)
+        endif()
+        # ========================================================================================================
     find_package(OpenGL REQUIRED)
     file(GLOB_RECURSE INITWINDOW_SOURCES CONFIGURE_DEPENDS
         src/InitTools/InitWindow/*.cpp
