--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,7 +202,7 @@ set(INITTOOLS_ADD_LIBRARY
     ${INITWINDOW_SOURCES}
 )
 if(INITTOOLS_ENABLE_INITLOCALE) # InitLocale
-    list(APPEND INITTOOLS_ADD_LIBRARY ${INITLOCALESOURCES})
+    list(APPEND INITTOOLS_ADD_LIBRARY ${INITLOCALE_SOURCES})
 endif()
 if(INITTOOLS_ENABLE_INITPLATFORM) # InitPlatform
     list(APPEND INITTOOLS_ADD_LIBRARY ${INITPLATFORM_SOURCES})
