--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,41 @@
 cmake_minimum_required(VERSION 3.24)
 project(InitTools VERSION 2.0.0 LANGUAGES CXX)
 
+# Функция с префиксом InitTools
+function(project_message msg_type msg_text)
+    message(${msg_type} "[InitTools] ${msg_text}")
+endfunction()
+
+# Формарование полной версии с (опциональным) PRERELEASE, и передача версии в Information.h.in
+set(PROJECT_RELEASE false) # Релизная ли текущая версия (т.е. без пометки PROJECT_PRERELEASE)
+set(PROJECT_PRERELEASE "beta.1") # Учитывается, если текущая версия не релизная
+set(PROJECT_FULL_VERSION "${PROJECT_VERSION}")
+if(NOT PROJECT_RELEASE)
+    set(PROJECT_FULL_VERSION "${PROJECT_VERSION}-${PROJECT_PRERELEASE}")
+    project_message(WARNING "The current version ${PROJECT_FULL_VERSION} is not a release version. Use this version at your own risk")
+endif()
+
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/Information.h.in
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/InitTools/Information.h
+    @ONLY
+)
+
 # add_compile_options(-save-temps=obj -dumpdir ${CMAKE_BINARY_DIR}/clang_temps/)
 
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps -O2")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions -fno-rtti")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Oz")
-set(CMAKE_CXX_STANDARD 17)
 
-message(STATUS "InitTools: Version ${PROJECT_VERSION}")
-message(STATUS "InitTools: CMake CXX Standart ${CMAKE_CXX_STANDARD}")
+# Ниже указывается target_compile_features(InitTools PUBLIC cxx_std_17)
+# set(CMAKE_CXX_STANDARD 17)
+# set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# set(CMAKE_CXX_EXTENSIONS OFF)
 
+project_message(STATUS "Version ${PROJECT_FULL_VERSION}")
+# message(STATUS "InitTools: CMake CXX Standart ${CMAKE_CXX_STANDARD}")
+
+# Устарело. Убрать на релизе
 #option(INITTOOLS_BUILD_DEBUG "InitTools Debug Build" OFF)
 #if(INITTOOLS_BUILD_DEBUG)
 #    message(STATUS "InitTools: Build Debug")
@@ -27,26 +52,30 @@ message(STATUS "InitTools: CMake CXX Standart ${CMAKE_CXX_STANDARD}")
 # 4. InitConsole
 # 5. InitWindow
 
-message(STATUS "InitTools: Build Type - ${CMAKE_BUILD_TYPE}")
+project_message(STATUS "Build Type - ${CMAKE_BUILD_TYPE}")
 
 # Включение / Выключение модулей
 option(INITTOOLS_ENABLE_INITLOCALE "Enable Module InitLocale" ON)
 option(INITTOOLS_ENABLE_INITPLATFORM "Enable Module InitPlatform" ON)
-option(INITTOOLS_ENABLE_INITCONSOLE "Enable Module InitConsole" ON)
 option(INITTOOLS_ENABLE_INITFILES "Enable Module InitFiles" ON)
+option(INITTOOLS_ENABLE_INITCONSOLE "Enable Module InitConsole" ON)
 option(INITTOOLS_ENABLE_INITWINDOW "Enable Module InitWindow" ON)
 
 # =====
+# InitConsole:
 option(INITTOOLS_USE_SYSTEM_SPDLOG "Use system spdlog instead of FetchContent" OFF)
 
+# InitWindow:
 option(INITTOOLS_USE_SYSTEM_GLFW "Use system glfw instead of FetchContent" OFF)
 option(INITTOOLS_USE_SYSTEM_GLAD "Use system glad instead of FetchContent" OFF)
 option(INITTOOLS_USE_SYSTEM_GLM "Use system glm instead of FetchContent" OFF)
 # =====
 
 # =====
+# InitConsole
 option(INITTOOLS_LINK_SPDLOG "Link spdlog inside InitTools" ON)
 
+# InitWindow
 option(INITTOOLS_LINK_GLFW "Link glfw inside InitTools" ON)
 option(INITTOOLS_LINK_GLAD "Link glad inside InitTools" ON)
 option(INITTOOLS_LINK_GLM "Link glm inside InitTools" ON)
@@ -59,55 +88,59 @@ file(GLOB_RECURSE MOPARSER_SOURCES CONFIGURE_DEPENDS
     src/MoParser/*.cpp
 )
 
-message(STATUS "InitTools: INITTOOLS -> INITTOOLS")
+project_message(STATUS "InitTools: INITTOOLS -> INITTOOLS")
 # INIT_TOOLS -> INIT_TOOLS:
+    project_message(STATUS "InitTools: INITTOOLS -> INITTOOLS ~> Set Sources")
     file(GLOB_RECURSE INITTOOLS_SOURCES CONFIGURE_DEPENDS
         src/InitTools/InitTools/*.cpp
     )
 
 if(INITTOOLS_ENABLE_INITLOCALE)
-message(STATUS "InitTools: INITTOOLS -> INITLOCALE")
+project_message(STATUS "InitTools: INITTOOLS -> INITLOCALE")
 # INIT_TOOLS -> INIT_LOCALE:
 
+    project_message(STATUS "InitTools: INITTOOLS -> INITLOCALE ~> Set Sources")
     file(GLOB_RECURSE INITLOCALE_SOURCES CONFIGURE_DEPENDS
         src/InitTools/InitLocale/*.cpp
     )
 else()
-message(STATUS "InitTools: INITTOOLS_ENABLE_INITLOCALE disabled")
+project_message(STATUS "InitTools: INITTOOLS_ENABLE_INITLOCALE disabled")
 endif()
 
 if(INITTOOLS_ENABLE_INITPLATFORM)
-message(STATUS "InitTools: INITTOOLS -> INITPLATFORM")
+project_message(STATUS "InitTools: INITTOOLS -> INITPLATFORM")
 # INIT_TOOLS -> INIT_PLATFORM:
-    message(STATUS "InitTools: INITTOOLS -> INITPLATFORM ~> WINDOWS")
+    project_message(STATUS "InitTools: INITTOOLS -> INITPLATFORM ~> WINDOWS")
     # INIT_TOOLS -> INIT_PLATFORM ~> WINDOWS:
         
+    project_message(STATUS "InitTools: INITTOOLS -> INITPLATFORM ~> Set Sources")
     file(GLOB_RECURSE INITPLATFORM_SOURCES CONFIGURE_DEPENDS
         src/InitTools/InitPlatform/*.cpp
         src/InitTools/InitPlatform/InitPlatform_Windows/*.cpp
     )
 else()
-message(STATUS "InitTools: INITTOOLS_ENABLE_INITPLATFORM disabled")
+project_message(STATUS "InitTools: INITTOOLS_ENABLE_INITPLATFORM disabled")
 endif()
 
 if(INITTOOLS_ENABLE_INITFILES)
-message(STATUS "InitTools: INITTOOLS -> INITFILES")
+project_message(STATUS "InitTools: INITTOOLS -> INITFILES")
 # INIT_TOOLS -> INIT_FILES:
     
+    project_message(STATUS "InitTools: INITTOOLS -> INITFILES ~> Set Sources")
     file(GLOB_RECURSE INITFILES_SOURCES CONFIGURE_DEPENDS
         src/InitTools/InitFiles/*.cpp
     )
 else()
-message(STATUS "InitTools: INITTOOLS_ENABLE_INITFILES disabled")
+project_message(STATUS "InitTools: INITTOOLS_ENABLE_INITFILES disabled")
 endif()
 
 if(INITTOOLS_ENABLE_INITCONSOLE)
-message(STATUS "InitTools: INITTOOLS -> INITCONSOLE")
+project_message(STATUS "InitTools: INITTOOLS -> INITCONSOLE")
 # INIT_TOOLS -> INIT_CONSOLE:
-    message(STATUS "InitTools: INITTOOLS -> INITCONSOLE ~> LOGGER")
+    project_message(STATUS "InitTools: INITTOOLS -> INITCONSOLE ~> LOGGER")
     # INIT_TOOLS -> INIT_CONSOLE ~> LOGGER:
         # spdlog
-        message(STATUS "InitTools: INITTOOLS -> INITCONSOLE ~> LOGGER ~ spdlog v1.15.3 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_SPDLOG})")
+        project_message(STATUS "InitTools: INITTOOLS -> INITCONSOLE ~> LOGGER ~ spdlog v1.15.3 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_SPDLOG} / LINK: ${INITTOOLS_LINK_SPDLOG})")
         if(INITTOOLS_USE_SYSTEM_SPDLOG)
             find_package(spdlog REQUIRED)
         else()
@@ -119,19 +152,20 @@ message(STATUS "InitTools: INITTOOLS -> INITCONSOLE")
             FetchContent_MakeAvailable(spdlog)
         endif()
         # ===========================================================================================================================
+    project_message(STATUS "InitTools: INITTOOLS -> INITCONSOLE ~> Set Sources")
     file(GLOB_RECURSE INITCONSOLE_SOURCES CONFIGURE_DEPENDS
         src/InitTools/InitConsole/*.cpp
         src/InitTools/InitConsole/InitConsole_Logger/*.cpp
     )
 else()
-message(STATUS "InitTools: INITTOOLS_ENABLE_INITCONSOLE disabled")
+project_message(STATUS "InitTools: INITTOOLS_ENABLE_INITCONSOLE disabled")
 endif()
 
 if(INITTOOLS_ENABLE_INITWINDOW)
-message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
+project_message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
 # INIT_TOOLS -> INIT_WINDOW:
         # GLFW
-        message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLFW 3.4 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLFW})")
+        project_message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLFW 3.4 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLFW} / LINK: ${INITTOOLS_LINK_GLFW})")
         if(INITTOOLS_USE_SYSTEM_GLFW)
             if(GLFW3_LIBRARY AND GLFW3_INCLUDE_DIR)
                 # message(STATUS "Using manually provided GLFW: ${GLFW3_LIBRARY}")
@@ -150,7 +184,7 @@ message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
         endif()
         # ========================================================================================================
         # GLAD
-        message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLAD v0.1.36 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLAD})")
+        project_message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLAD v0.1.36 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLAD} / LINK: ${INITTOOLS_LINK_GLAD})")
         if(INITTOOLS_USE_SYSTEM_GLAD)
             find_package(glad REQUIRED)
         else()
@@ -164,11 +198,11 @@ message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
                     COMMAND git apply ${GLAD_PATCH}
                 UPDATE_DISCONNECTED 1
             )
+            FetchContent_MakeAvailable(glad)
         endif()
-        FetchContent_MakeAvailable(glad)
         # ============================================================================================================
         # GLM
-        message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLM 1.0.1 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLM})")
+        project_message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~ GLM 1.0.1 (USE_SYSTEM: ${INITTOOLS_USE_SYSTEM_GLM} / LINK: ${INITTOOLS_LINK_GLM})")
         if(INITTOOLS_USE_SYSTEM_GLM)
             find_package(glm REQUIRED)
         else()
@@ -185,21 +219,22 @@ message(STATUS "InitTools: INITTOOLS -> INITWINDOW")
             FetchContent_MakeAvailable(glm)
         endif()
         # ========================================================================================================
+    project_message(STATUS "InitTools: INITTOOLS -> INITWINDOW ~> Set Sources")
     find_package(OpenGL REQUIRED)
     file(GLOB_RECURSE INITWINDOW_SOURCES CONFIGURE_DEPENDS
         src/InitTools/InitWindow/*.cpp
     )
 else()
-message(STATUS "InitTools: INITTOOLS_ENABLE_INITWINDOW disabled")
+project_message(STATUS "InitTools: INITTOOLS_ENABLE_INITWINDOW disabled")
 endif()
 
 # add_library
 set(INITTOOLS_ADD_LIBRARY
-    ${INITLOCALE_SOURCES}
-    ${INITPLATFORM_SOURCES}
-    ${INITFILES_SOURCES}
-    ${INITCONSOLE_SOURCES}
-    ${INITWINDOW_SOURCES}
+    # ${INITLOCALE_SOURCES}
+    # ${INITPLATFORM_SOURCES}
+    # ${INITFILES_SOURCES}
+    # ${INITCONSOLE_SOURCES}
+    # ${INITWINDOW_SOURCES}
 )
 if(INITTOOLS_ENABLE_INITLOCALE) # InitLocale
     list(APPEND INITTOOLS_ADD_LIBRARY ${INITLOCALE_SOURCES})
@@ -222,7 +257,7 @@ add_library(InitTools STATIC
     ${INITTOOLS_SOURCES}
     ${INITTOOLS_ADD_LIBRARY}
 )
-target_compile_features(InitTools PUBLIC cxx_std_20)
+target_compile_features(InitTools PUBLIC cxx_std_17)
 
 # target_link_libraries
 set(INITTOOLS_TARGET_LINK_LIBRARIES)
@@ -283,18 +318,23 @@ target_include_directories(InitTools
 add_library(InitTools::InitTools ALIAS InitTools)
 
 # Тестирование
-#enable_testing()
+option(INITTOOLS_ENABLE_TESTING "Enable Testing InitTools" OFF)
 
-#file(GLOB INITTOOLS_TEST_SOURCES CONFIGURE_DEPENDS tests/*.cpp)
+if(INITTOOLS_ENABLE_TESTING)
+    project_message(STATUS "InitTools: INITTOOLS_ENABLE_TESTING enabled")
+    enable_testing()
 
-#foreach(test_file IN LISTS INITTOOLS_TEST_SOURCES)
-#    get_filename_component(test_name ${test_file} NAME_WE)
+    file(GLOB INITTOOLS_TEST_SOURCES CONFIGURE_DEPENDS tests/*.cpp)
 
-#    add_executable(${test_name} ${test_file})
-#    target_link_libraries(${test_name} PRIVATE InitTools)
+    foreach(test_file IN LISTS INITTOOLS_TEST_SOURCES)
+        get_filename_component(test_name ${test_file} NAME_WE)
 
-#    add_test(NAME ${test_name} COMMAND ${test_name})
+        add_executable(${test_name} ${test_file})
+        target_link_libraries(${test_name} PRIVATE InitTools)
 
-    # target_compile_options(${test_name} PRIVATE -Os -ffunction-sections -fdata-sections -flto)
-    # target_link_options(${test_name} PRIVATE -Wl,--gc-sections -s -flto)
-#endforeach()
+        add_test(NAME ${test_name} COMMAND ${test_name})
+
+        # target_compile_options(${test_name} PRIVATE -Os -ffunction-sections -fdata-sections -flto)
+        # target_link_options(${test_name} PRIVATE -Wl,--gc-sections -s -flto)
+    endforeach()
+endif()
