--- a/modules/InitConsole/CMakeLists.txt
+++ b/modules/InitConsole/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.24)
 project(InitConsole)
 
+# Зависимости:
+# Нету
+
 project_message(STATUS "Add module .cpp files")
 add_library(InitConsole
     src/InitConsole.cpp
